fix color on api-access contrast issue

--- a/client/src/styles/bootstrap-override.scss
+++ b/client/src/styles/bootstrap-override.scss
@@ -204,3 +204,7 @@
 .disabled .accordion-button{
   background-color: #595959 !important;
 }
+
+.swagger-ui .opblock.opblock-post .opblock-summary-method {
+  background: #1D6343 !important;
+}
